--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -348,13 +349,8 @@
           <h3>DUAL CAMERA</h3>
           <p>Tristique senectus et netus et malesuada ant reiet fames</p>
         </div>
-
-
       </div>
-
     </div>
-
-
     <!-- end what makes essential defferent -->
 
 
@@ -409,8 +405,6 @@
 
     </div>
     <!-- end PERFORMANCE. POWER -->
-
-
 
     <!-- start INNOVATIVE QUALITIES -->
     <div class=" py-5">
@@ -474,8 +468,6 @@
 
         </div>
       </div>
-
-
     </div>
     <!-- end INNOVATIVE QUALITIES -->
 
@@ -487,16 +479,17 @@
         <p>FIND THE PERFECT PHONE FOR YOU</p>
       </div>
 
-      <div class="slide-container swiper ">
-        <div class="slide-content">
-          <div class="card-wrapper swiper-wrapper cards-area ">
+     
+<div class="slide-container swiper">
+  <div class="slide-content">
+    <div class="card-wrapper swiper-wrapper cards-area">
 
-          </div>
-        </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+    </div>
+  </div>
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
 
-      </div>
+</div>
     </div>
     <!-- end new arrival -->
 
@@ -507,10 +500,7 @@
         <h2>SEE WHY CUSTOMERS LOVE THE OUR MOBILES</h2>
         <p>DESIGNED TO PERFECTION</p>
       </div>
-
-
       <div class=" ro-accordion container">
-
         <div>
           <img src="./assets/images/bg-1.png" alt="mobile" class="img-fluid">
         </div>
@@ -583,10 +573,6 @@
     </div>
     <!-- end SEE WHY CUSTOMERS -->
 
-
-
-
-
   </main>
   <!-- Footer -->
   <footer class=" text-center text-white">
@@ -600,8 +586,6 @@
         <input type="email" placeholder="Enter your email id" />
         <button><i class="fa-solid fa-angle-right"></i></button>
       </div>
-
-
       <ul class="ro-footer-ul">
         <li><a href="">SEARCH</a></li>
         <li>|</li>
@@ -612,15 +596,8 @@
         <li><a href="">PRIVACY POLICY </a></li>
         <li>|</li>
         <li><a href="">SHIPPING DETAILS </a></li>
-
-
-
       </ul>
-
-
-
     </div>
-
   </footer>
   <!-- Copyright -->
   <div class="d-flex justify-content-between flex-wrap  container-fluid div-footer" >
@@ -638,21 +615,9 @@
     </div>
 
   </div>
-  <!-- Copyright -->
-
-  <!-- Footer -->
-
-  <!-- Footer -->
-
-
-
-
-
+  
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
   <script src="./script.js"></script>
 </body>
